feat: Add Level of Detail (Lod) and weather enrichment to API and SDKs.
